# ssol-simulator

./: .gitignore  Cargo.toml  README.md  RELEASING.md  fix-gltf.py  fix-level.py  mk-rel-tex-map.py  notes.md  update_positions.sh
.github/workflows/: ci-build.yml  release.yml
assets/models/: Bush1.gltf  Bush5.gltf  GameObject.gltf  Moving Person.gltf  MovingPerson.gltf  Player.gltf  Receiver.gltf  Sender.gltf  Shrub_01.gltf  Shrub_02.gltf  Shrub_03.gltf  Shrub_04.gltf  Weeds_01.gltf  Weeds_02.gltf  Weeds_03.gltf  Weeds_04.gltf  Weeds_05.gltf  arch.gltf  fencelong.gltf  hut.gltf  irorb.gltf  maptile.gltf  mushroom.gltf  mushroom2.gltf  mushroom3.gltf  mushroom4.gltf  orb.gltf  rockPlatform1.gltf  rockledge2.gltf  rockplatform2.gltf  whiteArch.gltf  whitePillar.gltf
assets/scenes/: level-zero.json
assets/shaders/: rel_shader.wgsl  rel_skybox.wgsl  rel_structs.wgsl  relativistic_compute.wgsl  relativistic_math.wgsl
assets/textures/: Blue.ktx2  Blue.png.meta.x  Bush1.ktx2  Bush1.png.meta.x  Bush1IR.ktx2  Bush1IR.png.meta.x  Bush1UV.ktx2  Bush1UV.png.meta.x  Bush5.ktx2  Bush5.png.meta.x  Shrub_01IR.ktx2  Shrub_01IR.png.meta.x  Shrub_01UV.ktx2  Shrub_01UV.png.meta.x  Shrub_01_D.ktx2  Shrub_01_D.png.meta.x  Shrub_03_D.ktx2  Shrub_03_D.png.meta.x  Shrub_04IR.ktx2  Shrub_04IR.png.meta.x  Shrub_04UV.ktx2  Shrub_04UV.png.meta.x  Shrub_04_D.ktx2  Shrub_04_D.png.meta.x  WHmenuActive.ktx2  WHmenuActive.png.meta.x  WHmenuHover.ktx2  WHmenuHover.png.meta.x  WHnextActive.ktx2  WHnextActive.png.meta.x  WHnextHover.ktx2  WHnextHover.png.meta.x  WHprevActive.ktx2  WHprevActive.png.meta.x  WHprevHover.ktx2  WHprevHover.png.meta.x  archmiddle.ktx2  archmiddle.png.meta.x  archmiddleIR.ktx2  archmiddleIR.png.meta.x  (+152 more)
orig_shaders/: README  RelativisticObject.cs  RelativisticParent.cs  relativity.shader
python/: IMPLEMENTATION_BRIEF.md  OLD_IMPL_BRIEF.md  pyproject.toml  test_connection.py
python/src/ssol_training/: __init__.py  feature_extractor.py  ssol_env.py  train.py
scripts/: package_release.py  release_assets.txt
src/: ai_support.rs  asset_paths.rs  audio.rs  cam_extra.rs  camera_controller.rs  camera_switcher.rs  config.rs  curriculum.rs  fly_camera_simple.rs  game_state.rs  key_mapping.rs  main.rs  orb_curriculum.rs  physics_interpolation.rs  player.rs  relativity.rs  scene_loader.rs  uv_fixer.rs
src/ai/: actions.rs  bridge.rs  curriculum.rs  gizmos.rs  mod.rs  navmesh.rs  observations.rs  rewards.rs  testing.rs
src/audio/: movement.rs
src/camera_switcher/: forced_cams.rs
src/game_state/: handle_orbs.rs
src/player/: orbs.rs
src/relativity/: rel_globals.rs  rel_material.rs  rel_material_old.rs  rel_pipeline.rs
src/scene/: calculated_data.rs  mod.rs
src/ui/: ai_debug.rs  finish_screen.rs  in_game.rs  mod.rs  pause_menu.rs  toasts.rs
