[package]
name = "ssol_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["bevy_ui_debug", "wav", "webp", "zlib"] }
# bevy_egui = "0.35.1"
bevy_rapier3d = { version = "0.30.0", features = ["parallel", "enhanced-determinism"] } # "simd-stable", <- if no enhanced-determinism
iyes_perf_ui = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.141"

[profile.dev.package."*"]
opt-level = 3
