[package]
name = "ssol_simulator"
version = "0.1.0"
edition = "2024"

[features]
default = [] # ["ai"]
ai = ["dep:zmq"]

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_ui_debug", "wav", "webp", "zlib", "serialize"] }
clap = { version = "4", features = ["derive"] }
# bevy_egui = "0.35.1"
bevy_rapier3d = { version = "0.32.0", features = ["parallel", "enhanced-determinism"] } # "simd-stable", <- if no enhanced-determinism
bevy_shader = "0.17.3"
bytemuck = { version = "1.23.1", features = ["derive"] }
iyes_perf_ui = { git = "https://github.com/XertroV/iyes_perf_ui.git" }
rand = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
vleue_navigator = "0.14"
zmq = {version = "0.10", optional = true}
bevy_framepace = "0.20.1"
directories = "6.0.0"

[profile.dev.package."*"]
opt-level = 3
